# cattrs-env

./: .gitignore  README.md  pyproject.toml  ruff.toml  test-requirements.txt
.github/workflows/: checks.yml
cattrs_env/: __init__.py
scripts/: lint.sh  test.sh
test/: test.py
