[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "cattrs-env"
dynamic = ["version"]
authors = [{ name = "Henry Jones", email = "henryivesjones@gmail.com" }]
description = "A tool for parsing and validating env vars using cattrs"
keywords = ["cattrs", "envvar", "environment variables", "attrs", "dataclasses"]

dependencies = ["cattrs>=20"]
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/henryivesjones/cattrs-env"


[tool.setuptools.dynamic]
version = { attr = "cattrs_env.__version__" }

[tool.setuptools.package-data]
"cattrs_env" = ["py.typed"]
